--- a/openrank/frontend/package.json
+++ b/openrank/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "1.0.0",
-  "description": "Frontend for code submission and question and test maintenance",
+  "description": "Frontend for OpenRank",
   "author": "Buddha Jyothiprasad <jyothiprasadb@gmail.com>",
   "private": true,
   "scripts": {
@@ -10,8 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.4.2",
-    "vue-router": "^2.7.0"
+    "vue": "^2.4.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
