--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
+    "jquery": "^3.2.1",
     "vue": "^2.4.2"
   },
   "devDependencies": {
