--- a/openrank-backend/package.json
+++ b/openrank-backend/package.json
@@ -4,8 +4,7 @@
   "description": "Express server backend for serving requests from client for OpenRank application.",
   "main": "src/index.js",
   "scripts": {
-    "start": "nodemon --exec babel-node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon --exec babel-node src/index.js"
   },
   "repository": {
     "type": "git",
