--- a/openrank-backend/package.json
+++ b/openrank-backend/package.json
@@ -34,6 +34,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^7.12.1",
     "sequelize": "^5.13.0"
   }
