Use dotenv to load config

--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,8 @@
+require('dotenv').config();
 const path = require('path');
 
 module.exports = {
-  "config": path.resolve('./server/config', 'config.json'),
+  "config": path.resolve('./server/config', 'config.js'),
   "models-path": path.resolve('./server/models'),
   "seeders-path": path.resolve('./server/seeders'),
   "migrations-path": path.resolve('./server/migrations')
